--- a/main.css
+++ b/main.css
@@ -124,11 +124,17 @@ h4{
 
 input{
 	border: none;
-	border-bottom: solid;
 	background-color: inherit;
 	padding: 10px;
 	width: 30%;
 }
 input:focus{
 	outline: none;
+}
+
+select{
+	width: 300px;
+}
+#submit{
+	font-size: 20px;
 }
